--- a/debian/control
+++ b/debian/control
@@ -3,7 +3,7 @@ Section: sound
 Priority: optional
 Maintainer: Tim Janik <timj@gnu.org>
 Build-Depends: debhelper (>= 9), dh-python, python, dh-autoreconf,
- libasound2-dev, libflac-dev, libvorbis-dev, libmad0-dev, guile-1.8-dev,
+ libasound2-dev, libflac-dev, libvorbis-dev, libmad0-dev,
  libgnomecanvas2-dev, libgtk2.0-dev, libxml2-utils, libxml-parser-perl,
  librapicorn-dev, python-rapicorn
 Build-Depends-Indep: doxygen
