DOCS: build docs with BSE_CONVENIENCE
Signed-off-by: Tim Janik <timj@gnu.org>

--- a/docs/doxygen.cfg
+++ b/docs/doxygen.cfg
@@ -43,7 +43,7 @@ ENABLED_SECTIONS	= ""
 REFERENCED_BY_RELATION	= YES
 
 MACRO_EXPANSION		= YES
-PREDEFINED  = DOXYGEN RAPICORN_CONVENIENCE __SIZEOF_LONG__=8
+PREDEFINED  = DOXYGEN BSE_CONVENIENCE __SIZEOF_LONG__=8
 PREDEFINED += static_assert(x,y)= RAPICORN_STATIC_ASSERT(x)= RAPICORN_STARTUP_ASSERT(x)=
 PREDEFINED += "record=struct" "sequence=struct" "RAPICORN_PIXBUF_TYPE=Pixbuf" "G_BEGIN_DECLS=" "G_END_DECLS="
 PREDEFINED += "__attribute__(x)=" RAPICORN_CONST= RAPICORN_NORETURN= RAPICORN_NOINLINE= RAPICORN_PRINTF(x,y)=
