JACK: add configure check for jack dependency
Signed-off-by: Stefan Westerfeld <stefan@space.twc.de>

--- a/configure.ac
+++ b/configure.ac
@@ -567,6 +567,12 @@ AC_DEFUN([MC_ASOUND_CHECK],
     CXXFLAGS="$saved_cxxflags"
     LDFLAGS="$saved_ldflags"
 ])
+AC_DEFUN([MC_JACK_REQUIREMENTS],
+[
+    PKG_CHECK_MODULES(JACK, jack >= 0.100.0)
+    AC_SUBST(JACK_CFLAGS)
+    AC_SUBST(JACK_LIBS)
+])
 AC_DEFUN([MC_GXK_REQUIREMENTS],
 [
     dnl # required libraries, defines LIB*_CFLAGS and LIB*_LIBS:
@@ -713,6 +719,7 @@ AM_CONDITIONAL(WITH_PERLRULE, [test "$PERLRULE" != "#"])
 MC_I18N_REQUIREMENTS
 MC_BSE_REQUIREMENTS
 MC_ASOUND_CHECK
+MC_JACK_REQUIREMENTS
 MC_BSE_SNDDEV_CHECK
 MC_PYTHON_REQUIREMENTS
 MC_GXK_REQUIREMENTS
