JACK: make driver compile
Use
 - std::atomic
 - std::mutex
 - std::condition_variable

Some bse related changes.

Signed-off-by: Stefan Westerfeld <stefan@space.twc.de>

--- a/drivers/Makefile.am
+++ b/drivers/Makefile.am
@@ -24,4 +24,4 @@ bsemididevice_alsa_la_LIBADD  = $(drivers_libs) $(ALSA_LIBS)
 # Plugin bsepcmdevice-jack
 bsepcmdevice_jack_la_SOURCES = bsepcmdevice-jack.cc
 bsepcmdevice_jack_la_LDFLAGS = $(AM_LDFLAGS) -module $(drivers_ldflags)
-bsepcmdevice_jack_la_LIBADD  = $(drivers_libs)
+bsepcmdevice_jack_la_LIBADD  = $(drivers_libs) $(JACK_LIBS)
