DOCS: adjust docs title
Signed-off-by: Tim Janik <timj@gnu.org>

--- a/docs/doxygen.cfg
+++ b/docs/doxygen.cfg
@@ -1,4 +1,4 @@
-PROJECT_NAME		= "BEAST - Free Software Audio Synthesizer and Tracker"
+PROJECT_NAME		= "Beast - Music Synthesizer and Composer"
 #OUTPUT_DIRECTORY	= doxyhtml/
 GENERATE_LATEX		= NO
 GENERATE_MAN		= NO
