--- a/docs/doxygen.cfg
+++ b/docs/doxygen.cfg
@@ -40,22 +40,22 @@ SHOW_USED_FILES 	= YES
 SHOW_INCLUDE_FILES	= YES
 INHERIT_DOCS		= YES
 ENABLED_SECTIONS	= ""
-REFERENCED_BY_RELATION	= YES
 
+ENABLE_PREPROCESSING	= YES
 MACRO_EXPANSION		= YES
+EXPAND_ONLY_PREDEF	= YES
 PREDEFINED  = DOXYGEN BSE_CONVENIENCE __SIZEOF_LONG__=8
 PREDEFINED += static_assert(x,y)= RAPICORN_STATIC_ASSERT(x)= RAPICORN_STARTUP_ASSERT(x)=
 PREDEFINED += "record=struct" "sequence=struct" "RAPICORN_PIXBUF_TYPE=Pixbuf" "G_BEGIN_DECLS=" "G_END_DECLS="
 PREDEFINED += "__attribute__(x)=" RAPICORN_CONST= RAPICORN_NORETURN= RAPICORN_NOINLINE= RAPICORN_PRINTF(x,y)=
 
-EXPAND_ONLY_PREDEF	= YES
 EXPAND_AS_DEFINED       =
-#ENABLE_PREPROCESSING	= YES
 
 #OPTIMIZE_OUTPUT_FOR_C	= YES
 
 DISABLE_INDEX		= YES
-#GENERATE_HTML          = YES
+GENERATE_HTML		= YES
+VERBATIM_HEADERS	= NO
 GENERATE_TREEVIEW	= YES
 #HTML_OUTPUT            = html
 #HTML_FILE_EXTENSION    = .html
