--- a/docs/doxygen.cfg
+++ b/docs/doxygen.cfg
@@ -55,7 +55,6 @@ EXPAND_AS_DEFINED       =
 
 DISABLE_INDEX		= YES
 GENERATE_HTML		= YES
-VERBATIM_HEADERS	= NO
 GENERATE_TREEVIEW	= YES
 #HTML_OUTPUT            = html
 #HTML_FILE_EXTENSION    = .html
@@ -75,18 +74,9 @@ DOT_TRANSPARENT         = YES
 DOT_FONTNAME 		= "Verdana Bold"
 #DOT_FONTNAME            = "DejaVuSansMono Bold"
 DOT_FONTSIZE            = 11
-UML_LOOK		= NO
-CLASS_GRAPH		= YES
-COLLABORATION_GRAPH	= NO
-GROUP_GRAPHS		= YES
-TEMPLATE_RELATIONS	= NO
-INCLUDE_GRAPH		= NO
-INCLUDED_BY_GRAPH	= YES
-GRAPHICAL_HIERARCHY	= YES
-DIRECTORY_GRAPH		= YES
-CALL_GRAPH		= NO
-CALLER_GRAPH		= NO
-
+DOT_MULTI_TARGETS	= YES
+DOT_GRAPH_MAX_NODES	= 999
+MAX_DOT_GRAPH_DEPTH	= 1
 
 ALIASES += amp="&"
 ALIASES += note="<br><em><b>Note:</b></em>" Note="<br><em><b>Note:</b></em>" NOTE="<br><em><b>Note:</b></em>"
@@ -103,3 +93,21 @@ ALIASES +=  DISCOURAGED="\xrefitem unstable \"Unstable\" \"Unstable API\" @b DIS
 ALIASES +=   DEPRECATED="\xrefitem unstable \"Unstable\" \"Unstable API\" @b DEPRECATED"
 ALIASES +=   deprecated="\xrefitem unstable \"Unstable\" \"Unstable API\" @b DEPRECATED"
 ALIASES += EXPERIMENTAL="\xrefitem unstable \"Unstable\" \"Unstable API\" @b EXPERIMENTAL"
+
+# settings for building slim vs rich docs, see Makefile.am
+VERBATIM_HEADERS	= IFRICH
+REFERENCED_BY_RELATION	= IFRICH
+CLASS_DIAGRAMS		= IFRICH
+CLASS_GRAPH		= IFRICH
+GROUP_GRAPHS		= IFRICH
+TEMPLATE_RELATIONS	= IFRICH
+INCLUDED_BY_GRAPH	= IFRICH
+GRAPHICAL_HIERARCHY	= IFRICH
+DIRECTORY_GRAPH		= IFRICH
+UML_LOOK		= IFRICH
+COLLABORATION_GRAPH	= IFRICH
+TEMPLATE_RELATIONS	= IFRICH
+INCLUDE_GRAPH		= IFRICH
+CALL_GRAPH		= IFRICH
+CALLER_GRAPH		= IFRICH
+HAVE_DOT		= IFRICH
