--- a/ebeast/package.json.in
+++ b/ebeast/package.json.in
@@ -8,7 +8,7 @@
   "devDependencies": { "node-gyp": "^3.5.0", "less": "^2.7.2",
 		       "electron-packager": "^8.6.0",
 		       "eslint": "^3.16.1", "eslint-plugin-html": "^2.0.1" },
-  "license":         "LGPL-3.0",
+  "license":         "LGPL-2.1+",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
