BSE: provide WaveOsc.sync_seek_perc in bseapi.idl
Signed-off-by: Tim Janik <timj@gnu.org>

--- a/bse/Makefile.am
+++ b/bse/Makefile.am
@@ -116,7 +116,7 @@ bse_proc_sources = $(strip \
 	bseeditablesample.proc	\
 	bsejanitor.proc		\
 										bsesource.proc		\
-				bseitem.proc					bsewaveosc.proc		\
+				bseitem.proc					\
 )
 bse_proc_gen_sources = $(bse_proc_sources:.proc=.genprc.cc)
 
